# HushGP

./: .gitignore  HushGP.cabal  Makefile  README.md  TODO.md  flake.nix
app/: .ghci  Main.hs
src/: .ghci  GP.hs  Instructions.hs  LearnLens.hs  LearnQuickCheck.hs  Main.hs  Makefile  Push.hs  PushTests.hs  State.hs  Tests.hs  main.hs
src/HushGP/: GP.hs  Genome.hs  Instructions.hs  Push.hs  PushTests.hs  State.hs  TH.hs  Utility.hs
src/HushGP/GP/: Downsample.hs  Individual.hs  PushArgs.hs  PushData.hs  Selection.hs  Simplification.hs  Variation.hs
src/HushGP/Instructions/: BoolInstructions.hs  CharInstructions.hs  CodeInstructions.hs  ExecInstructions.hs  FloatInstructions.hs  GenericInstructions.hs  IntInstructions.hs  Opens.hs  StringInstructions.hs  Utility.hs  VectorBoolInstructions.hs  VectorCharInstructions.hs  VectorFloatInstructions.hs  VectorIntInstructions.hs  VectorStringInstructions.hs
src/HushGP/Problems/: IntegerRegression.hs
src/HushGP/PushTests/: GenericTests.hs  IntTests.hs  TestStates.hs  UtilTests.hs  VectorIntTests.hs
src/HushGP/PushTests/GP/: Selection.hs
src/HushGP/Tools/: Metrics.hs
src/Instructions/: CharInstructions.hs  CodeInstructions.hs  ExecInstructions.hs  FloatInstructions.hs  GenericInstructions.hs  IntInstructions.hs  LogicalInstructions.hs  StringInstructions.hs  VectorCharInstructions.hs  VectorFloatInstructions.hs  VectorIntInstructions.hs  VectorLogicalInstructions.hs  VectorStringInstructions.hs
src/PushTests/: GenericTests.hs  IntTests.hs  UtilTests.hs
test/: .ghci  Main.hs  MainOld.hs  Main_old.hs
tests/: .ghci  Main.hs
tests/argfileio01_exact/: .ghci  Makefile
tests/argfileio01_fuzzy/: Makefile
tests/doctests/: Makefile
tests/format/: Makefile
tests/static_HLint/: Makefile
tests/static_Stan/: Makefile
tests/static_Werror/: Makefile
tests/stdio01_exact/: .ghci  Makefile
tests/stdio01_fuzzy/: Makefile
tests/unit01_unprotected/: Makefile  unit.hs
tests/unit03_QuickCheck/: .ghci  Makefile  unit.hs
